objects/LAT_BR_ClientChannelSegmentation2__c.object
<CustomObject>
    <fields>
        <fullName>q6_Qual_o_formato_do_negocio__c</fullName>
        <description>Qual o formato do negócio?</description>
        <inlineHelpText>Qual o formato do negócio?</inlineHelpText>
        <label>Qual o formato do negócio?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>q5_Qual_o_principal_p_blico__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Ck</fullName>
                </value>
                <value>
                    <fullName>2 a 4 Cks</fullName>
                </value>
                <value>
                    <fullName>5 a 9 Cks</fullName>
                </value>
                <value>
                    <fullName>10 a 19 Cks</fullName>
                </value>
                <value>
                    <fullName>20+ Cks</fullName>
                </value>
                <value>
                    <fullName>Capacidade máxima: 0 a 100 pessoas</fullName>
                </value>
                <value>
                    <fullName>Capacidade máxima: 101 a 300 pessoas</fullName>
                </value>
                <value>
                    <fullName>Capacidade máxima: 301 a 500 pessoas</fullName>
                </value>
                <value>
                    <fullName>Capacidade máxima: de 501 a 1000 pessoas</fullName>
                </value>
                <value>
                    <fullName>Capacidade máxima: Acima de 1001 pessoas</fullName>
                </value>
                <value>
                    <fullName>Capacidade máxima: 0 a 500 pessoas</fullName>
                </value>
                <value>
                    <fullName>Capacidade máxima: 501 a 800 pessoas</fullName>
                </value>
                <value>
                    <fullName>Capacidade máxima: 801 a 2000 pessoas</fullName>
                </value>
                <value>
                    <fullName>Capacidade máxima: 2001 a 5000 pessoas</fullName>
                </value>
                <value>
                    <fullName>Capacidade máxima: Acima de 5001 pessoas</fullName>
                </value>
                <value>
                    <fullName>Centro de armazenamento e distribuição para as lojas</fullName>
                </value>
                <value>
                    <fullName>N.A</fullName>
                </value>
                <value>
                    <fullName>Ponto de Venda</fullName>
                </value>
                <value>
                    <fullName>Ponto de Vendas com Centro de Armazenamento (Não possui CD separado da loja)</fullName>
                </value>
                <value>
                    <fullName>Possui Site de venda + Lojas Fisicas ou operação de distribuição com equipe de vendas (distribuidor ou atacado)</fullName>
                </value>
                <value>
                    <fullName>Somente site (não possui lojas fisicas e operação de distribuição com equipe de vendas)</fullName>
                </value>
                <value>
                    <fullName>B2B-Somente site (não possui lojas fisicas e operação de distribuição com equipe de vendas)</fullName>
                </value>
                <value>
                    <fullName>131121-N.A</fullName>
                </value>
                <value>
                    <fullName>132121-N.A</fullName>
                </value>
                <value>
                    <fullName>421-Capacidade máxima: 0 a 100 pessoas</fullName>
                </value>
                <value>
                    <fullName>421-Capacidade máxima: 101 a 300 pessoas</fullName>
                </value>
                <value>
                    <fullName>421-Capacidade máxima: 301 a 500 pessoas</fullName>
                </value>
                <value>
                    <fullName>421-Capacidade máxima: de 501 a 1000 pessoas</fullName>
                </value>
                <value>
                    <fullName>421-Capacidade máxima: Acima de 1001 pessoas</fullName>
                </value>
                <value>
                    <fullName>422-Capacidade máxima: 0 a 100 pessoas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>q7_Qual_modelo_de_neg_cio_do_cliente__c</fullName>
        <description>Qual modelo de negócio do cliente?</description>
        <inlineHelpText>Qual modelo de negócio do cliente?</inlineHelpText>
        <label>Qual modelo de negócio do cliente?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>q6_Qual_o_formato_do_negocio__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Área Colmeia - Trabalho prévio: preenchimento do &quot;Questionário de Avaliação de Competências para definição de Política Comercial&quot; Resultado final é igual ou superior a 90%</fullName>
                </value>
                <value>
                    <fullName>Área Colmeia - Trabalho prévio: preenchimento do &quot;Questionário de Avaliação de Competências para definição de Política Comercial&quot; Resultado final entre 70% e 89,99%</fullName>
                </value>
                <value>
                    <fullName>Área Colmeia - Trabalho prévio: preenchimento do &quot;Questionário de Avaliação de Competências para definição de Política Comercial&quot; Resultado final entre 50% e 69,99%</fullName>
                </value>
                <value>
                    <fullName>Clientes que, devido a características específicas da regiões que atuam (ausência de distribuidores), desempenham um papel estratégico de distribuição, chegando a pontos de vendas que normalmente seriam atendidos pelos distribuidores</fullName>
                </value>
                <value>
                    <fullName>Clientes que desempenham um papel complementar de distribuição nas regiões com atendimento de distribuidores</fullName>
                </value>
                <value>
                    <fullName>Cliente que precisa de avaliação de atendimento devido ao não enquadramento em alguma estratégia de atuação. Prazo máximo de permanência nessa classificação é de 6 meses.</fullName>
                </value>
                <value>
                    <fullName>Clientes com contrato ou acordo comercial que implica em políticas especificas de preços</fullName>
                </value>
                <value>
                    <fullName>Clientes sem contrato ou acordo comercial com amplo de número de categorias. Seu faturamento esta destinado ao atacado (CNPJ).  Possui Mix de Produtos com maior foco em itens nacionais e standard.</fullName>
                </value>
                <value>
                    <fullName>Clientes sem contrato ou acordo comercial com amplo de número de categorias. Possui Mix de Produtos com maior foco em itens importados, assim como uma melhor experiência de compra quando comparado ao Tradicional.</fullName>
                </value>
                <value>
                    <fullName>Clientes sem contrato ou acordo comercial, com amplo de número de categorias. Mix de Produtos tem maior faturamento em standard (alto giro). Sem ofertas de produtos ou serviços mais sofisticados, como serviço de somelier por exemplo.</fullName>
                </value>
                <value>
                    <fullName>Clientes sem contrato ou acordo comercial, com amplo número de categorias, focam sua estratégia em bebidas destiladas como categoria de Destino. Há oferta de produtos e serviços mais sofisticados, esta concentrado na classe A.</fullName>
                </value>
                <value>
                    <fullName>Clientes sem contrato ou acordo comercial com número restrito de categorias. Mix de Produtos com foco em standard e importados líderes de mercado. Loja com perfil tradicional e baixo nível de experiência de compra.</fullName>
                </value>
                <value>
                    <fullName>Clientes sem contrato ou acordo comercial com número restrito de categorias. Mix de produtos com foco em itens S.Premium, de luxo e exclusivos. Há oferta de produtos e serviços mais sofisticados, concentrado nas classes altas (A).</fullName>
                </value>
                <value>
                    <fullName>Cliente On Trade que efetuamos venda direta</fullName>
                </value>
                <value>
                    <fullName>Cliente On Trade que efetuamos apenas pagamento de contratos ou cartas acordo.</fullName>
                </value>
                <value>
                    <fullName>Cliente sem contrato ou acordo comercial</fullName>
                </value>
                <value>
                    <fullName>Modelo On Line de venda para funcionários, família e amigos de funcionários e empresas parceriras realizadas atraves de um operador Fulfillment.</fullName>
                </value>
                <value>
                    <fullName>Não Colmeia: equipe de vendas trabalha com portfólio reduzido; exclusividade em destilados (exceção: On Trade/Eventos); delimitação de área/canais de atuação; capacidade de execução e troca informação</fullName>
                </value>
                <value>
                    <fullName>N.A</fullName>
                </value>
                <value>
                    <fullName>EVE-Cliente On Trade que efetuamos venda direta</fullName>
                </value>
                <value>
                    <fullName>EVE-Cliente On Trade que efetuamos apenas pagamento de contratos ou cartas acordo.</fullName>
                </value>
                <value>
                    <fullName>EVE-N.A</fullName>
                </value>
                <value>
                    <fullName>ONL-Cliente sem contrato ou acordo comercial</fullName>
                </value>
                <value>
                    <fullName>ONL-Clientes com contrato ou acordo comercial que implica em políticas especificas de preços</fullName>
                </value>
                <value>
                    <fullName>OFF-N.A</fullName>
                </value>
                <value>
                    <fullName>OFF-Clientes sem contrato ou acordo comercial com amplo de número de categorias. Possui Mix de Produtos com maior foco em itens importados, assim como uma melhor experiência de compra quando comparado ao Tradicional.</fullName>
                </value>
                <value>
                    <fullName>OFF-Clientes sem contrato ou acordo comercial, com amplo de número de categorias. Mix de Produtos tem maior faturamento em standard (alto giro). Sem ofertas de produtos ou serviços mais sofisticados, como serviço de somelier por exemplo.</fullName>
                </value>
                <value>
                    <fullName>OFF-Clientes com contrato ou acordo comercial que implica em políticas especificas de preços</fullName>
                </value>
                <value>
                    <fullName>132121-Clientes que, devido a características específicas da regiões que atuam (ausência de distribuidores), desempenham um papel estratégico de distribuição, chegando a pontos de vendas que normalmente seriam atendidos pelos distribuidores</fullName>
                </value>
                <value>
                    <fullName>132121-Clientes que desempenham um papel complementar de distribuição nas regiões com atendimento de distribuidores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>q8_cliente_possui_benefcio_Fiscal__c</fullName>
        <description>O cliente possui algum benefício Fiscal?</description>
        <inlineHelpText>O cliente possui algum benefício Fiscal?</inlineHelpText>
        <label>O cliente possui algum benefício Fiscal?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>q7_Qual_modelo_de_neg_cio_do_cliente__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não possui regime especial de tributação que envolve uma vantagem ou simplesmente um desagravamento fiscal perante o regime normal ou outras medidas fiscais dessa natureza.</fullName>
                </value>
                <value>
                    <fullName>Possui regime especial de tributação que envolve uma vantagem ou simplesmente um desagravamento fiscal perante o regime normal, assumindo-se como uma forma de isenção, redução de taxas, deduções, amortizações e/ou outras medidas fiscais dessa natureza.</fullName>
                </value>
                <value>
                    <fullName>N.A</fullName>
                </value>
                <value>
                    <fullName>EVE-N.A</fullName>
                </value>
                <value>
                    <fullName>B2B-N.A</fullName>
                </value>
                <value>
                    <fullName>ONL-N.A</fullName>
                </value>
                <value>
                    <fullName>ONL-Não possui regime especial de tributação que envolve uma vantagem ou simplesmente um desagravamento fiscal perante o regime normal ou outras medidas fiscais dessa natureza.</fullName>
                </value>
                <value>
                    <fullName>ONL-Possui regime especial de tributação que envolve uma vantagem ou simplesmente um desagravamento fiscal perante o regime normal, assumindo-se como uma forma de isenção, redução de taxas, deduções, amortizações e/ou outras medidas fiscais dessa natureza</fullName>
                </value>
                <value>
                    <fullName>OFF-Não possui regime especial de tributação que envolve uma vantagem ou simplesmente um desagravamento fiscal perante o regime normal ou outras medidas fiscais dessa natureza.</fullName>
                </value>
                <value>
                    <fullName>OFF-Possui regime especial de tributação que envolve uma vantagem ou simplesmente um desagravamento fiscal perante o regime normal, assumindo-se como uma forma de isenção, redução de taxas, deduções, amortizações e/ou outras medidas fiscais dessa natureza</fullName>
                </value>
                <value>
                    <fullName>OFF-N.A</fullName>
                </value>
                <value>
                    <fullName>131121-Possui regime especial de tributação que envolve uma vantagem ou simplesmente um desagravamento fiscal perante o regime normal, assumindo-se como uma forma de isenção, redução de taxas, deduções, amortizações e/ou outras medidas fiscais dessa natur</fullName>
                </value>
                <value>
                    <fullName>131121-Não possui regime especial de tributação que envolve uma vantagem ou simplesmente um desagravamento fiscal perante o regime normal ou outras medidas fiscais dessa natureza.</fullName>
                </value>
                <value>
                    <fullName>132121-Possui regime especial de tributação que envolve uma vantagem ou simplesmente um desagravamento fiscal perante o regime normal, assumindo-se como uma forma de isenção, redução de taxas, deduções, amortizações e/ou outras medidas fiscais dessa natur</fullName>
                </value>
                <value>
                    <fullName>132121-Não possui regime especial de tributação que envolve uma vantagem ou simplesmente um desagravamento fiscal perante o regime normal ou outras medidas fiscais dessa natureza.</fullName>
                </value>
                <value>
                    <fullName>421-N.A</fullName>
                </value>
                <value>
                    <fullName>422-N.A</fullName>
                </value>
                <value>
                    <fullName>423-N.A</fullName>
                </value>
                <value>
                    <fullName>621-N.A</fullName>
                </value>
                <value>
                    <fullName>622-N.A</fullName>
                </value>
                <value>
                    <fullName>623-N.A</fullName>
                </value>
                <value>
                    <fullName>Não possui regime especial de tributação que envolve vantagem ou simplesmente um desagravamento fiscal perante o regime normal, assumindo-se como uma forma de isenção, redução de taxas, deduções, amortizações e/ou outras medidas fiscais dessa natureza.</fullName>
                    <isActive>false</isActive>
                    <label>Não possui regime especial de tributação que envolve vantagem ou simplesmente um desagravamento fiscal perante o regime normal, assumindo-se como uma forma de isenção, redução de taxas, deduções, amortizações e/ou outras medidas fiscais dessa natureza.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>q9_Qual_a_importancia_do_cliente_para_PR__c</fullName>
        <description>Qual a importância do cliente para PRB?</description>
        <inlineHelpText>Qual a importância do cliente para PRB?</inlineHelpText>
        <label>Qual a importância do cliente para PRB?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>q8_cliente_possui_benefcio_Fiscal__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Casas com Contrato (Assinado pelo CODI) independente do valor ou do número de categorias/segmentos exclusivos</fullName>
                </value>
                <value>
                    <fullName>Casas com contrato de exclusividade da concorrência. Permanecem na base para acompanhamento e monitoramento da relação comercial, sem poder de execução de nossas marcas</fullName>
                </value>
                <value>
                    <fullName>Casas que trabalham com produtos PRB e da concorrência, sem vinculo comercial, apenas com atendimento do consultor para atuações taticas de atividades</fullName>
                </value>
                <value>
                    <fullName>Cliente estratégico para receber um tratamento diferenciado no que diz respeito a investimentos, confecção de planos e gestão de performance. Troca de informações sistematizada é mandatória.</fullName>
                </value>
                <value>
                    <fullName>Cliente não prioritário em investimentos mas com papel relevante no mercado, principalmente em volume. Alinhado com as estratégias PRB, participa dos planos táticos e troca informações</fullName>
                </value>
                <value>
                    <fullName>Cliente que prioriza uma relação transacional, preocupando-se mais em levar vantagem sobre seus fornecedores do que construir uma relação de parceria no estilo &quot;ganha-ganha&quot;. Tende a praticar políticas de preço predatórias no mercado.</fullName>
                </value>
                <value>
                    <fullName>Cliente que terá um tratamento diferenciado devido ao seu potencial de impactar o mercado no que diz respeito a desenvolvimento de categoria, marcas e experiência de compra para o Shopper</fullName>
                </value>
                <value>
                    <fullName>Cliente que terá um tratamento diferenciado no que diz respeito à investimento e acompanhamento de resultados. Relação comercial que proporciona o alcance da fidelização e satisfação do cliente em qualquer nível do relacionamento.</fullName>
                </value>
                <value>
                    <fullName>Negociações pontuais que envolvem contrapartidas comerciais e de visibilidade no valor máximo de 50.000 (Cinquenta mil Reais), com documento de formalização chamado Carta Acordo assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>Negociações pontuais que envolvem, obrigatoriamente, contrapartidas comerciais no valor máximo de Cinquenta mil Reais, com documento de formalização chamado Carta Acordo assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>Negociações que envolvem, obrigatoriamente, um calendário de eventos com contrapartidas comerciais acima de Cinquenta mil Reais, com documento de formalização chamado Contrato Comercial assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>N.A</fullName>
                </value>
                <value>
                    <fullName>Cliente que prioriza uma relação transacional, preocupando-se mais em levar vantagem sobre seus fornecedores do que construir uma relação de parceria no estilo &quot;ganha-ganha&quot;. Ele é imediatista, só vê o benefício na forma de cifrões.</fullName>
                </value>
                <value>
                    <fullName>422-Negociações pontuais que envolvem contrapartidas comerciais e de visibilidade no valor máximo de 50.000 (Cinquenta mil Reais), com documento de formalização chamado Carta Acordo assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>422-Casas com Contrato (Assinado pelo CODI) independente do valor ou do número de categorias/segmentos exclusivos</fullName>
                </value>
                <value>
                    <fullName>422-Casas que trabalham com produtos PRB e da concorrência, sem vinculo comercial, apenas com atendimento do consultor para atuações taticas de atividades</fullName>
                </value>
                <value>
                    <fullName>423-Negociações pontuais que envolvem contrapartidas comerciais e de visibilidade no valor máximo de 50.000 (Cinquenta mil Reais), com documento de formalização chamado Carta Acordo assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>423-Casas com Contrato (Assinado pelo CODI) independente do valor ou do número de categorias/segmentos exclusivos</fullName>
                </value>
                <value>
                    <fullName>423-Casas que trabalham com produtos PRB e da concorrência, sem vinculo comercial, apenas com atendimento do consultor para atuações taticas de atividades</fullName>
                </value>
                <value>
                    <fullName>423-Casas com contrato de exclusividade da concorrência. Permanecem na base para acompanhamento e monitoramento da relação comercial, sem poder de execução de nossas marcas</fullName>
                </value>
                <value>
                    <fullName>421-Negociações pontuais que envolvem contrapartidas comerciais e de visibilidade no valor máximo de 50.000 (Cinquenta mil Reais), com documento de formalização chamado Carta Acordo assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>421-Casas com Contrato (Assinado pelo CODI) independente do valor ou do número de categorias/segmentos exclusivos</fullName>
                </value>
                <value>
                    <fullName>421-Casas que trabalham com produtos PRB e da concorrência, sem vinculo comercial, apenas com atendimento do consultor para atuações taticas de atividades</fullName>
                </value>
                <value>
                    <fullName>621-Negociações que envolvem, obrigatoriamente, um calendário de eventos com contrapartidas comerciais acima de Cinquenta mil Reais, com documento de formalização chamado Contrato Comercial assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>621-Negociações pontuais que envolvem, obrigatoriamente, contrapartidas comerciais no valor máximo de Cinquenta mil Reais, com documento de formalização chamado Carta Acordo assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>622-Negociações que envolvem, obrigatoriamente, um calendário de eventos com contrapartidas comerciais acima de Cinquenta mil Reais, com documento de formalização chamado Contrato Comercial assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>622-Negociações pontuais que envolvem, obrigatoriamente, contrapartidas comerciais no valor máximo de Cinquenta mil Reais, com documento de formalização chamado Carta Acordo assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>623-Negociações que envolvem, obrigatoriamente, um calendário de eventos com contrapartidas comerciais acima de Cinquenta mil Reais, com documento de formalização chamado Contrato Comercial assinado por representantes legais da Cia.</fullName>
                </value>
                <value>
                    <fullName>623-Negociações pontuais que envolvem, obrigatoriamente, contrapartidas comerciais no valor máximo de Cinquenta mil Reais, com documento de formalização chamado Carta Acordo assinado por representantes legais da Cia.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Questionário Segmentação</label>
    <nameField>
        <displayFormat>QS-{00000}</displayFormat>
        <label>Código Questionário Segmentação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionário Segmentação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>